--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-<h1> HEJSAN </h1>
+<html>
+	<head>
+		<meta charset="utf-8">
+
+		<title>
+			hallejulia
+		</title>
+
+
+			<style type="text/css">
+				    body{
+       					cursor: url(http://www.pngmart.com/files/4/Cool-PNG-File.png), default;
+				}
+
+			h1 {
+			color:yellow;
+			font-size:100px;
+			align-content:1;
+			}
+
+			h2 {
+				color:red;
+				font-size:50px;
+			}
+
+			h3 {
+				color:orange;
+				font-size:50px;
+			}
+
+
+			p {
+				color:white;
+				font-size:25px;
+			}
+
+		</style>
+
+
+
+
+	</head>
+	<body background="fall-2016-new-european-men-casual-vest-outdoor.jpg">
+
+			<h1 style="text-align:center;"> 
+
+				only for enginieers  with motor intrest
+
+			</h1>
+
+			<h2>
+				this is you
+			</h2>
+
+			<img width="100" src=
+				grotesque-nose_1.jpg
+			</img>
+
+			<h3>
+				this is me haha
+			</h3>
+
+			<img src="giphy.gif"</img>
+
+
+			<marquee scrollamount="50">
+
+				<img width="400" src="https://h24-original.s3.amazonaws.com/148627/13086999-fREVF.jpg">
+				<img width="400" src="https://h24-original.s3.amazonaws.com/148627/13086999-fREVF.jpg">
+				<img width="400" src="https://h24-original.s3.amazonaws.com/148627/13086999-fREVF.jpg">
+				<img width="400" src="https://h24-original.s3.amazonaws.com/148627/13086999-fREVF.jpg">
+
+			</marquee>
+
+		<p>
+			i like speed come join me and go fast
+		</p>
+
+			<marquee>
+				<img class="irc_mi" src="http://img1.laughinggif.com/pic/HTTP2Nkbi5ncmFwaGljc2ZhY3RvcnkuY29tL2NsaXAtYXJ0L2ltYWdlX2ZpbGVzL2ltYWdlLzkvMTI4ODY2OS1uYXNjYXItMDA0XzA2MTcyMDA2LmdpZgloglog.gif" alt="Bildresultat för race car msn gif" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="150" height="150" style="margin-top: 122px;">
+				<img class="irc_mi" src="http://img1.laughinggif.com/pic/HTTP2Nkbi5ncmFwaGljc2ZhY3RvcnkuY29tL2NsaXAtYXJ0L2ltYWdlX2ZpbGVzL2ltYWdlLzkvMTI4ODY2OS1uYXNjYXItMDA0XzA2MTcyMDA2LmdpZgloglog.gif" alt="Bildresultat för race car msn gif" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="150" height="150" style="margin-top: 122px;">
+			</marquee>
+
+			<p>Place your mouse pointer <a href="#">over me</a> to reveal the custom cursor.</p>
+
+
+	</body>
+</html>
